Jan 30, 2016 - chris ---------------------------------------------------
                      release of upscaledb-2.1.13

Jan 26, 2016 - chris ---------------------------------------------------
o Removed a bad assert and fixed a bug in ups_cursor_move (thanks, Rafal
	Czaja)

Jan 21, 2016 - chris ---------------------------------------------------
o issue #47: fixed bad assert in ups_cursor_move

Jan 21, 2016 - chris ---------------------------------------------------
o issue #62: ups_info prints wrong value for "max record size"

Jan 21, 2016 - chris ---------------------------------------------------
o issue #66: return with error if a database is modified by a committed
	transaction which was not yet flushed to disk (thanks, Balazs Bamer) 

Jan 21, 2016 - chris ---------------------------------------------------
o issue #67: fixed broken installation path and other "ham"/"hamsterdb"
	references (thanks, Wouter Hager)

Jan 18, 2016 - chris ---------------------------------------------------
o Changed the .NET/C# delegate interface for custom compare functions; the
    delegate has to perform the marshalling now (see unittests for a
    sample)

Jan 13, 2016 - chris ---------------------------------------------------
o issue #64: fixed segfault when recovering a database with a custom
    compare function; deprecated ups_db_set_compare_func, use
    ups_register_compare/UPS_PARAM_CUSTOM_COMPARE_NAME instead

Nov 13, 2015 - chris ---------------------------------------------------
o Now restoring the "active blob page" after recovery to reduce the
    file size.

Nov 09, 2015 - chris ---------------------------------------------------
o UPS_ENABLE_RECOVERY is now an alias for UPS_ENABLE_TRANSACTIONS

Nov 06, 2015 - chris ---------------------------------------------------
o issue #55: correctly handling error condition if mmap fails

Nov 05, 2015 - chris ---------------------------------------------------